Corrections cosmétiques et ajout de règles fonctionnelles

--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -46,7 +46,8 @@
             android:layout_height="0dp"
             app:layout_marginLeft="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_base}"
             app:layout_marginRight="@{quickAccessModel == null ? @dimen/spell_margins : 0.0f}"
-            android:src="@drawable/card_verso"
+            android:src="@{model.witchspellsMode ? @drawable/witchspells_book_background : @drawable/card_verso}"
+            tools:src="@drawable/card_verso"
             app:layout_constraintDimensionRatio="H,161:225"
             app:layout_constraintLeft_toRightOf="@id/quick_access_recycler_view"
             app:layout_constraintRight_toRightOf="parent"
@@ -62,7 +63,7 @@
             android:textSize="40sp"
             android:gravity="center"
             app:customFont="@{@string/technical_font}"
-            android:textColor="@android:color/black"
+            android:textColor="@{model.witchspellsMode ? @android:color/white : @android:color/black}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
