--- a/app/src/main/res/layout/activity_witchspells_path_chooser.xml
+++ b/app/src/main/res/layout/activity_witchspells_path_chooser.xml
@@ -35,7 +35,8 @@
                 android:padding="@dimen/spacing_base"
                 android:text="@string/Witchspells_Choose_Main_Path"
                 android:textColor="@android:color/white"
-                android:textSize="24sp"
+                android:textSize="32sp"
+                app:customFont="@{@string/spell_title_font}"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
