--- a/app/src/main/res/layout/view_spell_grade_item.xml
+++ b/app/src/main/res/layout/view_spell_grade_item.xml
@@ -56,8 +56,8 @@
             android:ellipsize="end"
             android:gravity="center_horizontal"
             android:maxLines="2"
-            android:paddingLeft="@dimen/spacing_large"
-            android:paddingRight="@dimen/spacing_large"
+            android:paddingLeft="@dimen/spacing_base"
+            android:paddingRight="@dimen/spacing_base"
             android:textColor="@android:color/black"
             android:textSize="11sp"
             android:text="@{model.effect}"
