--- a/app/src/main/res/layout/view_witchspells_add_item.xml
+++ b/app/src/main/res/layout/view_witchspells_add_item.xml
@@ -31,10 +31,13 @@
             android:layout_height="60dp"
             android:layout_width="60dp"
             android:src="@drawable/ic_add_white"
+            android:paddingLeft="8dp"
+            android:paddingBottom="12dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"/>
+            app:layout_constraintRight_toRightOf="parent"
+            tools:ignore="RtlHardcoded,RtlSymmetry" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
