--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_xbig"
             android:layout_marginRight="@dimen/spacing_xbig"
-            android:background="@drawable/card_spell_grade_background">
+            android:background="@{model.limitedGrade ? @drawable/card_spell_grade_gray_background : @drawable/card_spell_grade_background}">
 
             <android.support.constraint.Guideline
                 android:id="@+id/top_guideline"
