--- a/app/src/main/res/layout/view_spell_grade_item.xml
+++ b/app/src/main/res/layout/view_spell_grade_item.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="169dp"
         android:layout_height="92dp"
-        android:background="@drawable/card_spell_grade_background"
+        android:background="@{model.limitedGrade ? @drawable/card_spell_grade_gray_background : @drawable/card_spell_grade_background}"
         android:onClick="@{() -> model.expandGrade()}"
         android:orientation="vertical">
 
