--- a/app/src/main/res/layout/view_witchspells_spellbook_secondary.xml
+++ b/app/src/main/res/layout/view_witchspells_spellbook_secondary.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="model"
-            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsSecondarySpellbookViewModel" />
+            type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.secondary.WitchspellsSecondarySpellbookViewModel" />
     </data>
 
     <android.support.constraint.ConstraintLayout
