--- a/app/src/main/res/layout/activity_witchspells_path_chooser.xml
+++ b/app/src/main/res/layout/activity_witchspells_path_chooser.xml
@@ -15,6 +15,7 @@
     </data>
 
     <FrameLayout
+        android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/witchspells_book_background">
