Correction sur les titres des livres, sur le fait de pouvoir cliquer sur le grimoire et sur l'affichage du chargement

--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -81,6 +81,7 @@
             android:background="@android:color/transparent"
             app:expandListener="@{model.expandListener}"
             app:itemSelectionListener="@{model.selectionListener}"
+            app:setVisible="@{model.stackVisible}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/quick_access_recycler_view"
             app:layout_constraintRight_toRightOf="parent"
