--- a/app/src/main/res/layout/view_witchspells_book_item.xml
+++ b/app/src/main/res/layout/view_witchspells_book_item.xml
@@ -48,21 +48,28 @@
             android:id="@+id/witchspells_container_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:onClick="@{() -> model.onBookClicked()}"
+            android:paddingBottom="60dp"
             android:paddingEnd="@dimen/spacing_xlarge"
             android:paddingLeft="@dimen/spacing_xlarge"
             android:paddingRight="@dimen/spacing_xlarge"
             android:paddingStart="@dimen/spacing_xlarge"
-            android:paddingBottom="60dp"
             app:layoutManager="@{model.layoutManager}"
             app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
             app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
             app:layout_constraintRight_toRightOf="@id/witchspells_background"
             app:layout_constraintTop_toBottomOf="@+id/witchspells_name"
-            app:viewModels="@{model.viewModels}"
-            android:clickable="false"
-            android:focusableInTouchMode="false"
-            android:focusable="false"/>
+            app:viewModels="@{model.viewModels}" />
+
+        <FrameLayout
+            android:id="@+id/clickable_layout"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:onClick="@{() -> model.onBookClicked()}"
+            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
+            app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
+            app:layout_constraintRight_toRightOf="@id/witchspells_background"
+            app:layout_constraintTop_toTopOf="@id/witchspells_background"
+            app:setVisible="@{model.withClickableFrame}" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
