--- a/app/src/main/res/values/textsizes.xml
+++ b/app/src/main/res/values/textsizes.xml
@@ -4,6 +4,8 @@
     <dimen name="textSize_spell_title">32sp</dimen>
     <dimen name="textSize_spell_reduced_title">24sp</dimen>
 
+    <dimen name="textSize_book_title">36sp</dimen>
+
     <dimen name="textSize_min">10sp</dimen>
     <dimen name="textSize_regular">12sp</dimen>
     <dimen name="textSize_medium">15sp</dimen>
