Changement de style pour les boutons et ajout de ripple

--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -101,7 +101,7 @@
 
             <Button
                 android:id="@+id/spell_close_button"
-                style="@style/Widget.AppCompat.Button.Borderless"
+                style="@style/FlatButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="@{() -> model.onDismissClicked()}"
