--- a/app/src/main/res/layout/activity_witchspells_path_chooser.xml
+++ b/app/src/main/res/layout/activity_witchspells_path_chooser.xml
@@ -44,13 +44,12 @@
 
             <Button
                 android:id="@+id/main_path_validation_button"
-                style="@style/FlatButton"
+                style="@style/ScrollButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacing_large"
                 android:onClick="@{() -> listener.onValidationClicked()}"
                 android:text="@string/Common_Validate"
-                android:textColor="@android:color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent" />
