--- a/app/src/main/res/layout/fragment_witchspells_free_access_chooser.xml
+++ b/app/src/main/res/layout/fragment_witchspells_free_access_chooser.xml
@@ -43,12 +43,11 @@
 
         <Button
             android:id="@+id/validate_button"
-            style="@style/FlatButton"
+            style="@style/ScrollButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{() -> listener.onValidateClicked()}"
-            android:text="@string/Common_Validate"
-            android:textColor="@android:color/white" />
+            android:text="@string/Common_Validate" />
 
     </LinearLayout>
 
