--- a/app/src/main/res/layout/view_book_subview.xml
+++ b/app/src/main/res/layout/view_book_subview.xml
@@ -60,27 +60,26 @@
 
         <Button
             android:id="@+id/witchspells_view_button"
-            style="@style/FlatButton"
+            style="@style/ScrollButton"
             setVisible="@{model.witchspells != null}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_base"
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/spacing_large"
             android:onClick="@{() -> model.onSeeSpellsClicked()}"
             android:text="@string/Witchspells_See_Spells"
-            android:textColor="@android:color/white"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/book_title_textview" />
 
         <Button
             android:id="@+id/witchspells_modify_button"
-            style="@style/FlatButton"
+            style="@style/ScrollButton"
             setVisible="@{model.witchspells != null}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="@dimen/spacing_small"
             android:onClick="@{() -> model.onModifyClicked()}"
             android:text="@string/Common_Modify"
-            android:textColor="@android:color/white"
             app:layout_constraintHorizontal_chainStyle="packed"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toLeftOf="@+id/witchspells_delete_button"
@@ -88,15 +87,15 @@
 
         <Button
             android:id="@+id/witchspells_delete_button"
-            style="@style/FlatButton"
+            style="@style/ScrollButton"
             setVisible="@{model.witchspells != null}"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
             android:layout_marginLeft="@dimen/spacing_base"
             android:layout_marginStart="@dimen/spacing_base"
+            android:layout_marginTop="@dimen/spacing_small"
             android:onClick="@{() -> model.onDeleteClicked()}"
             android:text="@string/Common_Delete"
-            android:textColor="@android:color/white"
             app:layout_constraintLeft_toRightOf="@+id/witchspells_modify_button"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/witchspells_view_button" />
