--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat">
         <item name="colorPrimary">@android:color/black</item>
+        <item name="colorControlHighlight">@color/dark_gray</item>
     </style>
 
     <style name="FlatButton" parent="Widget.AppCompat.Button.Borderless">
@@ -11,6 +12,16 @@
         <item name="android:paddingLeft">@dimen/spacing_base</item>
         <item name="android:paddingRight">@dimen/spacing_base</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="ScrollButton" parent="Widget.AppCompat.Button.Borderless">
+        <item name="android:background">@drawable/scroll_button_banner</item>
+        <item name="android:paddingLeft">@dimen/spacing_base</item>
+        <item name="android:paddingRight">@dimen/spacing_base</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:gravity">center</item>
+        <item name="android:width">120dp</item>
+        <item name="android:height">40dp</item>
     </style>
 
     <style name="FlatButton.NoPadding" >
