Changement de gestion des spell stack (pour garder la position dans la liste des books)

--- a/app/src/main/res/layout/view_spell_grade_item.xml
+++ b/app/src/main/res/layout/view_spell_grade_item.xml
@@ -55,7 +55,8 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:gravity="center_horizontal"
-            android:maxLines="2"
+            android:maxLines="1"
+            android:layout_marginTop="4dp"
             android:paddingLeft="@dimen/spacing_base"
             android:paddingRight="@dimen/spacing_base"
             android:textColor="@android:color/black"
