--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -23,7 +23,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+        android:background="@drawable/spells_background">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/quick_access_recycler_view"
