Suite de corrections pour la compatibilité tablette

--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -22,6 +22,7 @@
             android:id="@+id/spellbook_title_switcher"
             android:layout_width="0dp"
             android:layout_height="@dimen/home_page_title_height"
+            app:layout_constraintWidth_max="600dp"
             android:text="@{model.currentTitle}"
             app:animate="@{true}"
             app:factoryCompat="@{model.getSwitcherFactory(context)}"
@@ -34,10 +35,11 @@
             android:id="@+id/subview_panel"
             layout="@layout/view_book_subview"
             android:layout_width="0dp"
-            android:layout_height="150dp"
+            android:layout_height="@dimen/subview_panel_height"
             android:layout_marginBottom="@dimen/spacing_base"
             android:layout_marginLeft="@dimen/spacing_base"
             android:layout_marginRight="@dimen/spacing_base"
+            app:layout_constraintWidth_max="600dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -46,6 +48,7 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layout_constraintWidth_max="380dp"
             app:addOnScrollListener="@{model.onScrollListener}"
             app:hasFixedSize="@{true}"
             app:layoutManager="@{model.layoutManager}"
