--- a/app/src/main/res/layout/view_spellbook_item.xml
+++ b/app/src/main/res/layout/view_spellbook_item.xml
@@ -70,6 +70,7 @@
             app:layout_constraintLeft_toLeftOf="@id/spell_card_background"
             app:layout_constraintRight_toRightOf="@id/spell_card_background"
             app:layout_constraintVertical_bias="0.8"
+            android:textColor="@android:color/black"
             android:text="@{model.getTitle(context)}"
             app:customFont="@{@string/spellbook_title_font}"
             android:textSize="32sp"
