--- a/app/src/main/res/layout/fragment_spells_stack.xml
+++ b/app/src/main/res/layout/fragment_spells_stack.xml
@@ -46,6 +46,7 @@
             android:id="@+id/spell_card_background"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layout_constraintWidth_max="@dimen/spell_card_max_width"
             app:layout_marginLeft="@{quickAccessModel == null ? @dimen/spell_margins : @dimen/spacing_base}"
             app:layout_marginRight="@{quickAccessModel == null ? @dimen/spell_margins : 0.0f}"
             android:src="@{model.witchspellsMode ? @drawable/witchspells_book_background : @drawable/card_verso}"
