Ajout About us + signaler un bug / une erreur

--- a/app/src/main/res/values/static_strings.xml
+++ b/app/src/main/res/values/static_strings.xml
@@ -7,4 +7,6 @@
     <string name="spell_title_font" translatable="false">anima_2</string>
     <string name="spellbook_title_font" translatable="false">anima_2</string>
 
+    <string name="Mail_TMA" translatable="false">yann.huriez@gmail.com</string>
+
 </resources>
