--- a/app/src/main/res/layout/view_about_us.xml
+++ b/app/src/main/res/layout/view_about_us.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -11,24 +12,20 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/spacing_xlarge">
 
-        <ScrollView
+        <WebView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{@string/About_Us_Body}"/>
-
-        </ScrollView>
+            android:layout_weight="1"
+            app:loadUrl='@{"file:///android_asset/html/about_us.html"}'/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:layout_marginTop="@dimen/spacing_base"
             android:onClick="@{() -> model.onOkClicked()}"
             android:layout_marginRight="@dimen/spacing_large"
             android:layout_marginEnd="@dimen/spacing_large"
