--- a/app/src/main/res/layout/dialog_spell_grade.xml
+++ b/app/src/main/res/layout/dialog_spell_grade.xml
@@ -17,7 +17,7 @@
         android:gravity="center">
 
         <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
+            android:layout_width="360dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/spacing_xbig"
             android:layout_marginRight="@dimen/spacing_xbig"
@@ -107,6 +107,7 @@
                 android:onClick="@{() -> model.onDismissClicked()}"
                 android:text="@string/Common_Close"
                 app:customFont="@{@string/regular_bold_font}"
+                android:layout_marginRight="@dimen/spacing_large"
                 app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/spell_grade_effect" />
