--- a/app/src/main/res/layout/view_book_empty_item.xml
+++ b/app/src/main/res/layout/view_book_empty_item.xml
@@ -9,7 +9,7 @@
     </data>
 
     <FrameLayout
-        android:layout_width="210dp"
-        android:layout_height="@dimen/home_book_height"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:background="@android:color/transparent"/>
 </layout>
